--- a/pages/index.css
+++ b/pages/index.css
@@ -235,11 +235,10 @@
   padding: 0;
   margin-bottom: 32px;
   border-radius: 4px;
-
   height: 60px;
   font-family: "Inter";
   font-style: normal;
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   transition: ease-out;
