--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,7 +18,7 @@
 .footer__column-heading {
   margin: 0 0 20px;
   font-size: 16px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
   line-height: 20px;
 }
@@ -32,6 +32,8 @@
 
 .footer__social-link:hover {
   color: #c1c1c1;
+  transition: ease-out;
+  transition-duration: 1s;
 }
 
 .footer__social-icon {
@@ -44,11 +46,15 @@
   margin: 0 0 16px;
 }
 
+.footer__list-item:last-child {
+  margin: 0;
+}
+
 .footer__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-size: 16px;
   line-height: 20px;
@@ -56,7 +62,7 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
