--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,7 +7,7 @@
   position: relative;
   box-sizing: border-box;
   padding: 30px 80px 40px;
-  background-image: url("/images/background_header.svg");
+  background-image: url(../images/background_header.svg);
   background-position: center;
   background-color: #fff;
   background-repeat: no-repeat;
@@ -19,12 +19,13 @@
   font-size: 60px;
   line-height: 72px;
   margin: 183px 0 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
+  z-index: 2;
 }
 
 .header__description {
@@ -32,7 +33,7 @@
   font-size: 20px;
   line-height: 30px;
   margin: 28px 0 0;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Georgia, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -50,7 +51,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Georgia, serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -62,12 +63,13 @@
   display: flex;
   justify-content: space-between;
   margin-top: auto;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
+  align-items: flex-end;
 }
 
 .header__paragraph {
