--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,6 +1,6 @@
 .menu {
   background-color: #fff;
-  background-image: url(/images/background_menu.svg);
+  background-image: url(../images/background_menu.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -10,11 +10,11 @@
 .menu__title {
   text-align: center;
   max-width: 780px;
-  max-width: 780px;
   margin: auto;
   margin-bottom: 24px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
+  font-weight: 500;
   font-size: 44px;
   line-height: 52px;
 }
@@ -23,10 +23,9 @@
   text-align: center;
   margin: 0 0 100px;
   max-width: 780px;
-  max-width: 780px;
   margin: auto;
   margin-bottom: 100px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Georgia, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -43,10 +42,6 @@
   list-style-type: none;
 }
 
-.card {
-  width: 540px;
-}
-
 .card__list {
   padding: 0;
   margin: 0;
@@ -55,7 +50,7 @@
 
 .card__title {
   margin: 0 0 32px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -65,17 +60,22 @@
 .card__list-item {
   margin-bottom: 16px;
   display: flex;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Georgia, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  width: 540px;
+}
+
+.card__list-item:last-child {
+  margin: 0;
 }
 
 .card__list-divider {
   border-bottom: 1px solid black;
   flex-grow: 1;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Georgia, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
