--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -8,7 +8,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -22,6 +22,8 @@
 
 .nav__link:hover {
   color: #2f80ed;
+  transition: ease-out;
+  transition-duration: 1s;
 }
 
 .nav__logo {
