--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,15 +1,15 @@
 .recipes {
   padding: 100px 80px 215px;
   background-color: #0a2750;
-  background-image: url(/images/background_recipes.svg);
+  background-image: url(../images/background_recipes.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 .recipes__title {
   max-width: 580px;
-  margin: 100px 80px 24px;
-  font-family: "Inter";
+  margin: 0 0 24px;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -19,8 +19,8 @@
 
 .recipes__subtitle {
   max-width: 438px;
-  margin: 0 80px;
-  font-family: "Noto Serif";
+  margin: 0;
+  font-family: "Noto Serif", Georgia, serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -38,12 +38,13 @@
   margin: 80px 0 24px;
   width: 480px;
   height: 273px;
+  border: none;
 }
 
 .recipes__videos-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
