--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,5 +1,5 @@
 .reservation {
-  background-image: url(/images/background_reservation.svg);
+  background-image: url(../images/background_reservation.svg);
   background-color: #d9e7ff;
   background-repeat: no-repeat;
   background-position: center;
@@ -10,7 +10,7 @@
 .reservation__title {
   margin: 0 0 80px;
   text-align: center;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
