--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -21,6 +21,7 @@
   font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
   line-height: 20px;
+  font-style: normal;
 }
 
 .footer__social-link {
@@ -32,8 +33,7 @@
 
 .footer__social-link:hover {
   color: #c1c1c1;
-  transition: ease-out;
-  transition-duration: 1s;
+  transition: 0.5s ease-out;
 }
 
 .footer__social-icon {
@@ -56,6 +56,7 @@
   margin: 0;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
+  font-weight: normal;
   font-size: 16px;
   line-height: 20px;
 }
