--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -22,8 +22,7 @@
 
 .nav__link:hover {
   color: #2f80ed;
-  transition: ease-out;
-  transition-duration: 1s;
+  transition: 0.5s ease-out;
 }
 
 .nav__logo {
